2006-08-04  Nathaniel Smith  <njs@pobox.com>

	* xdelta.cc (piece_table::build, insert_insn): Better handling of
	string expansion, from Eric Anderson.
	Pluck of d1e563447ab7d92bb965eb330988c637f3c22d14, plus formatting
	fixups.

2006-08-04  Nathaniel Smith  <njs@pobox.com>

	* mtn.1, monotone.texi: Who are we kidding?  The man page is more
	misleading than helpful.  Put a big warning at its top, and delete
	the yet-even-more-bitrotten copy from the texinfo manual.

2006-08-04  Matt Johnston  <matt@ucc.asn.au>

	* std_hooks.lua: make ssh://host/~/path/file.mtn and
	ssh://host/~user/path/file.mtn work for paths relative to homedirs.

2006-08-04  Thomas Keller  <me@thomaskeller.biz>

	* automate.cc: reworked `automate attributes`, this now
	  outputs basic_io and shows the state of each attribute
          (added, dropped, changed or unchanged) and also lists
	  those attributes which have been dropped obviously
	* monotone.texi: updated the docs for that change
	* cmd_automate.cc: bumped interface_version to 3.0 since
	  the new automate attributes is incompatible with the
	  previous one
	* tests/automate_attributes/__driver__.lua: updated test
	* roster.cc: moved syms namespace ...
	* basic_io.hh: ... here and updated the references in the
	  former file. This is a first start for a more generic
	  symbols namespace which should lead to a more consistent
	  output of the different automate commands which make use
	  of basic_io

2006-08-03  Matt Johnston  <matt@ucc.asn.au>

	* cmd_diff_log.cc: don't include revisions with deleted files
	when doing "log FILE".
	* tests/log_with_restriction/: a test

2006-08-03  Matt Johnston  <matt@ucc.asn.au>

	* inodeprints.cc: just silently skip (but L()) inodeprint files
	if the format version is unknown.

2006-08-02  Zack Weinberg  <zackw@panix.com>

	* acinclude.m4: Rename to m4/inaddrnone.m4; update macro to
	autoconf 2.5x conventions.

	* m4/ac_compile_check_sizeof.m4: Delete, unused.