@@ -55,6 +55,9 @@ namespace constants
   // number of rosters in the database roster cache
   extern size_t const db_roster_cache_sz;
 
+  // maximum number of bytes to be consumed with the pending write cache
+  extern unsigned long const db_max_pending_writes_bytes;
+
   // size of a line of text in the log buffer, beyond which log lines will be
   // truncated.
   extern size_t const log_line_sz;
