@@ -90,11 +90,14 @@ class database
 
   std::map<std::string, statement> statement_cache;
   std::map<std::pair<std::string, hexenc<id> >, data> pending_writes;
+  size_t pending_writes_size;
 
+  size_t size_pending_write(std::string const & tab, hexenc<id> const & id, data const & dat);
   bool have_pending_write(std::string const & tab, hexenc<id> const & id);
   void load_pending_write(std::string const & tab, hexenc<id> const & id, data & dat);
   void cancel_pending_write(std::string const & tab, hexenc<id> const & id);
   void schedule_write(std::string const & tab, hexenc<id> const & id, data const & dat);
+  void flush_pending_writes();
 
   app_state * __app;
   struct sqlite3 * __sql;
